<resources>
    <string name="floodwhat">
        WHAT TO DO WHEN FLOOD COMES:
    </string>
    <string name="landwhat">
        WHAT TO DO WHEN LANDSLIDE COMES:
    </string>
    <string name="volcwhat">
        WHAT TO DO WHEN VOLCANIC ERUPTION COMES:
    </string>

    <string name="typhoontodo">
        Stay inside the house.</string>
    <string name="typhoontodo2">
        Always keep yourself updated with the latest weather report.</string>
    <string name="typhoontodo3">
        If there is a need to move to an evacuation center, follow these reminders.</string>
    <string name="typhoontodo4">Evacuate calmly.</string>
    <string name="ty5">
        Close the windows and turn off the main power switch.</string>
    <string name="ty6">
    Put important appliances and belongings in a high ground.
    </string>
    <string name="ty7">
    Avoid the way leading to the river.
    </string>

    <string name="floodtodo">
    Be Alert
    </string>
    <string name="fl1">
    Don’t drive unless you have to.If you must drive, travel with care
    </string>
    <string name="fl2">
    NEVER drive through flooded roadways. STOP! Turn Around Don’t Drown.
    </string>
    <string name="fl3">
    Get to high ground – Climb to safety!
    </string>
    <string name="fl4">
    Evacuate immediately, if you think you are at risk or are advised to do so!
    </string>
    <string name="fl5">
    Put important appliances and belongings in a high ground.
    </string>


    <string name="landtodo">
    Listen to local news stations on a battery-powered radio for warnings of heavy rainfall.
    </string>
    <string name="la2">
    Listen for unusual sounds that might indicate moving debris, such as trees cracking or boulders knocking together.
    </string>
    <string name="la3">
    Move away from the path of a landslide or debris flow as quickly as possible.
    </string>
    <string name="la4">
    Look upstream before crossing a bridge and do not cross the bridge if a mudflow is approaching.
    </string>
    <string name="la5">
    Avoid river valleys and low-lying areas.
    </string>


    <string name="volctodo">
    Listen for emergency information and alerts.
    </string>
    <string name="volc1">
    Follow evacuation or shelter orders. If advised to evacuate, then do so early.
    </string>
    <string name="volc2">
    Avoid areas downstream of the eruption.
    </string>
    <string name="volc3">
    Protect yourself from falling ash.
    </string>
    <string name="volc4">
    Do not drive in heavy ash fall.
    </string>


    <string name="app_name">FinalsProject_Ignacio_Lucero</string>
    <string name="title">iCare</string>
    <string name="button1">Let us Get Started</string>
    <string name="title2">Disaster List </string>
    <string name="typhoon">Typhoon</string>
    <string name="landslide">Land Slide</string>
    <string name="volcanic">Volcanic Eruption</string>
    <string name="flood">Flood</string>
    <string name="back">Back</string>
    <string name="flooddes">
        A flood is an overflow of water that submerges land that is usually dry.
    </string>
    <string name="typhoondes">
        A typhoon is a mature tropical cyclone that develops between 180° and 100°E in the Northern Hemisphere. 
    </string>
    <string name="volcanicdes">
       A volcanic eruption occurs when hot materials from the earth's interior are thrown out of a volcano.
     </string>
    <string name="landdes">
        A landslide is defined as the movement of a mass of rock, debris, or earth down a slope.
    </string>
    <string name="buttonwhat">What To Do</string>
    <string name="buttonbring">What to Bring</string>
    <string name="typhoonwhat">WHAT TO DO WHEN TYPHOON COMES:
    </string>

    <!---->


    <string name="save">SAVE</string>
    <string name="done">DONE</string>

    <!--TO BRING-->
    <string name="floodstarter">FLOOD STARTER PACK</string>
    <string name="cbf1">
    Bottled Water
    </string>
    <string name="cbf2">
    Food
    </string>
    <string name="cbf3">
    Clothes
    </string>
    <string name="cbf4">
    First-aid kit
    </string>
    <string name="cbf5">
    Radio
    </string>
    <string name="cbf6">
    Cash
    </string>
    <string name="cbf7">
    Batteries and Chargers
    </string>
    <string name="cbf8">
    Whistle
    </string>
    <string name="cbf9">
    Medicine
    </string>
    <string name="cbf10">
    Rubber Boots
    </string>

    <!---->

    <string name="typhoonstarter">TYPHOON STARTER PACK</string>

    <string name="cbt1">Bottled Water</string>
    <string name="cbt2">Food</string>
    <string name="cbt3">First Aid Kit</string>
    <string name="cbt4">Clothes</string>
    <string name="cbt5">Flashlight and Batteries</string>
    <string name="cbt6">Medicine</string>
    <string name="cbt7">Umbrella or Raincoats</string>
    <string name="cbt8">Whistle</string>
    <string name="cbt9">Cash</string>
    <string name="cbt10">Fully Charged Phone</string>
    <string name="cbt11">Battery-Powered Radio</string>
    <!---->

    <string name="landstarter">LANDSLIDE STARTER PACK</string>

    <string name="cbl1">Personal Belongings</string>
    <string name="cbl2">Fully-Charged Phone</string>
    <string name="cbl3">Flashlight</string>
    <string name="cbl4">First-Aid Kit</string>
    <string name="cbl5">Cash</string>
    <string name="cbl6">Food</string>
    <string name="cbl7">Water</string>

    <!---->

    <string name="volcanicstarter">VOLCANIC ERUPTION STARTER PACK</string>

    <string name="cbv1">Food</string>
    <string name="cbv2">Water</string>
    <string name="cbv3">First Aid Kit</string>
    <string name="cbv4">Medicine</string>
    <string name="cbv5">Goggles</string>
    <string name="cbv6">Masks</string>
    <string name="cbv7">Sturdy Shoes</string>
    <string name="cbv8">Batter-Powered Radio</string>
    <string name="cb9">Fully-Charged Phone</string>
    <!---->
</resources>
