<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/bg"
    tools:context=".ToBringTyphoon">
    <TextView
        android:id="@+id/textView6"
        style="@style/title4"
        android:layout_width="264dp"
        android:layout_height="wrap_content"


        android:layout_marginBottom="8dp"
        android:layout_marginEnd="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@drawable/round_border"
        android:text="@string/typhoonstarter"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/back"
        style="@style/button"
        android:layout_width="56dp"
        android:layout_height="36dp"

        android:layout_centerVertical="true"

        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:onClick="tobring"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="347dp"
        android:layout_height="620dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"

        android:layout_marginTop="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            style="@style/checklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"

            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <CheckBox
                android:id="@+id/cbt1"
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:text="@string/cbt1"
                android:theme="@style/check" />

            <CheckBox
                android:id="@+id/cbt2"
                android:layout_width="match_parent"

                android:layout_height="56dp"
                android:text="@string/cbt2"
                android:theme="@style/check" />

            <CheckBox
                android:id="@+id/cbt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbt3"
                android:theme="@style/check" />

            <CheckBox
                android:id="@+id/cbt4"
                style="@style/check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbt4" />

            <CheckBox
                android:id="@+id/cbt5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbt5"
                android:theme="@style/check" />

            <CheckBox
                android:id="@+id/cbt6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbt6"
                android:theme="@style/check" />

            <CheckBox
                android:id="@+id/cbt7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbt7"
                android:theme="@style/check" />

            <CheckBox
                android:id="@+id/cbt8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbt8"
                android:theme="@style/check" />

            <CheckBox
                android:id="@+id/cbt9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbt9"
                android:theme="@style/check" />

            <CheckBox
                android:id="@+id/cbt10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbt10"
                android:theme="@style/check" />

            <Button
                android:id="@+id/save"
                style="@style/button2"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="tobring"
                android:text="@string/save" />
        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>