<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/bg"
    android:layout_height="match_parent"
    tools:context=".ToBringLandslide">

    <TextView
        android:id="@+id/textView6"
        style="@style/title4"
        android:layout_width="264dp"
        android:layout_height="wrap_content"


        android:layout_marginBottom="8dp"
        android:layout_marginEnd="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:background="@drawable/round_border"
        android:text="@string/floodstarter"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583" />

    <Button
        android:id="@+id/back"
        style="@style/button"
        android:layout_width="56dp"
        android:layout_height="36dp"

        android:layout_centerVertical="true"

        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:onClick="tobring"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="347dp"
        android:layout_height="620dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"

        android:layout_marginTop="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            style="@style/checklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <CheckBox
                android:id="@+id/cbf1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbf1"
                android:theme="@style/check" />

            <CheckBox
                android:id="@+id/cbf2"
                android:layout_width="wrap_content"

                android:layout_height="56dp"
                android:text="@string/cbf2"
                android:theme="@style/check" />

            <CheckBox
                android:id="@+id/cbf3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbf3"
                android:theme="@style/check" />

            <CheckBox
                android:id="@+id/cbf4"
                style="@style/check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbf4" />

            <CheckBox
                android:id="@+id/cbf5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbf5"
                android:theme="@style/check" />

            <CheckBox
                android:id="@+id/cbf6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbf6"
                android:theme="@style/check" />

            <CheckBox
                android:id="@+id/cbf7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbf7"
                android:theme="@style/check" />
            <CheckBox
                android:id="@+id/cbf8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbf8"
                android:theme="@style/check" />
            <CheckBox
                android:id="@+id/cbf9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbf9"
                android:theme="@style/check" />
            <CheckBox
                android:id="@+id/cbf10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbf10"
                android:theme="@style/check" />

            <Button
                android:id="@+id/save"
                style="@style/button2"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="is_Checked"
                android:text="@string/save" />
        </LinearLayout>

    </ScrollView>



</android.support.constraint.ConstraintLayout>